--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Saurabh Kumar"
 title_separator          : "-"
 name                     : &name "Saurabh Kumar"
 description              : &description "personal description"
-url                      : https://saurabhk0317.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://saurabhk.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/about"
 repository               : "saurabhk0317/saurabhk0317.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
@@ -82,12 +82,12 @@ analytics:
 author:
   name             : "Saurabh Kumar"
   avatar           : "profile.png"
-  bio              : "Research Assistant, IISc Bangalore"
+  bio              : "Research Associate, IISc Bangalore"
   location         : "Bengaluru, India"
   employer         :
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  pubmed           : 
   googlescholar    : "http://yourfullgooglescholarurl.com"
-  email            :
+  email            : "saurabhk0317@gmail.com"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
@@ -102,14 +102,14 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         :
-  orcid            : "http://orcid.org/yourorcidurl"
+  linkedin         : "https://www.linkedin.com/in/saurabhk0317"
+  orcid            : "https://orcid.org/0000-0003-1825-5178"
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : "replacethistwitterhandle"
+  twitter          : "saurabhk3107"
   vine             :
   weibo            :
   xing             :
